--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
 	</string-array>
 	<string name="drawer_expand_description">Open Navigation Drawer</string>
 	<string name="drawer_close_description">Close Navigation Drawer</string>
+	
+	<!-- TODO: Remove or change this placeholder text -->
+	<string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
