--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,19 @@
 	<string name="drawer_expand_description">Open Navigation Drawer</string>
 	<string name="drawer_close_description">Close Navigation Drawer</string>
 	
-	<!-- TODO: Remove or change this placeholder text -->
 	<string name="hello_blank_fragment">Hello blank fragment</string>
+	<string name="must_include_server_name">Must include a name</string>
+	<string name="must_include_server_hostname">Cannot save server without a hostname</string>
+	<string name="use_https">Use HTTPS</string>
+	<string name="standalone_server">Standalone</string>
+	<string name="deployment_type">Deployment Type</string>
+	<string name="app_server">App Server</string>
+	<string name="custom_ctx">Custom Context</string>
+	<string name="custom_ctx_hint">context (ie: /media)</string>
+	<string name="new_server">New Server</string>
+	<string name="edit_server">Edit Server</string>
+	<string name="server_saved_successfully">Server saved successfully</string>
+	<string name="hostname_must_not_be_url">Cannot be a URL</string>
+	<string name="srvr_hostname_hint">hostname[:port] or IP[:port]</string>
+	<string name="invalid_port">Invalid port %s</string>
 </resources>
